--- a/public/less/all.less
+++ b/public/less/all.less
@@ -9,17 +9,24 @@
 
 body {
     font-family: @font-family;
-    font-size: 15px;
-}
-
-h1, h2, h3 {
-    font-family: @font-family;
-    font-style: italic;
+    font-size: 16px;
 }
 
 h2 {
-    font-size: 28px;
+    font-family: @font-family;
+    font-style: italic;
+    font-size: 29px;
 }
+
+@media(max-width:768px) {
+    body {
+        font-size: 15px;
+    }
+    h2 {
+        font-size: 24px;
+    }
+}
+
 
 .row.logo {
     height: 80px;
@@ -27,7 +34,6 @@ h2 {
 }
 
 .row.banner {
-    min-height: 480px;
     background: transparent url(/public/img/store.jpg) center center no-repeat;
     background-size: cover;
     padding-bottom: 0;
@@ -35,20 +41,30 @@ h2 {
     .col-sm-12 {
         height: 480px;
         margin: 0 auto;
-        padding: 0;
+        padding: 40px 0 0;
         background: transparent url(/public/img/mastercard.png) center bottom no-repeat;
         text-align: center;
         h2 {
-            margin: 40px auto;
+            margin: 0 auto;
             color: white;
             color: rgba(255, 255, 255, 0.9);
         }
     }
 }
 
+@media(max-width:768px) {
+    .row.banner {
+        .col-sm-12 {
+            height: 305px;
+            padding: 20px 0 0;
+            background-size: 100%;
+        }
+    }
+}
+
 .row.desktop {
     p {
-        padding: 40px 20px 10px;
+        padding: 20px 20px 10px;
         text-align: center;
     }
 
@@ -66,13 +82,33 @@ h2 {
     }
 }
 
+.row.mobile {
+    text-align: center;
+    p {
+        margin: 20px 0 0;
+    }
+    h2 {
+        font-style: normal;
+        font-weight: 600;
+        margin-bottom: 50px;
+    }
+    a {
+        padding: 12px 60px;
+        border-radius: 4px;
+        border: 1px solid #F15A29;
+        background-color: #F15A29;
+        color: white;
+        text-decoration: none;
+    }
+}
+
 form {
     display: block;
     margin: 20px auto;
     text-align: center;
 
     input[name="model"], input[name="email"], input[type="submit"] {
-        padding: 10px 15px;
+        padding: 12px 15px;
         border: 1px solid #aaa;
         margin-bottom: 15px;
         border-radius: 4px;
