--- a/public/less/all.less
+++ b/public/less/all.less
@@ -130,3 +130,33 @@ form {
         color: white;
     }
 }
+
+
+.row.thanks {
+    text-align: center;
+    p {
+        margin-top: 25px;
+    }
+    p.social {
+        text-align: center;
+        a {
+            display: inline-block;
+            width: 51px;
+            height: 51px;
+            margin: 10px;
+        }
+        a.vk {
+            background: transparent url(/public/img/vkontakte.png) center center no-repeat;
+        }
+        a.fb {
+            background: transparent url(/public/img/facebook.png) center center no-repeat;
+        }
+        a.tw {
+            background: transparent url(/public/img/twitter.png) center center no-repeat;
+        }
+        a.gp {
+            background: transparent url(/public/img/gplus.png) center center no-repeat;
+        }
+    }
+    display: none;
+}
