--- a/views/landing.jade
+++ b/views/landing.jade
@@ -56,7 +56,7 @@ html(lang='en')
                     table
                         tr
                             td HTC One M8
-                            td Sony Xpreia Z
+                            td Sony Xperia Z
                         tr
                             td HTC One E8
                             td Philips W5888
@@ -75,6 +75,23 @@ html(lang='en')
                         br
                         input(type='email', name='email', placeholder='Ваш e-mail')
                         input(type='submit', value='OK')
+
+            .row.thanks
+                p
+                    | Спасибо!
+                    br
+                    | Мы сообщим Вам о поддержке
+                    br
+                    | Вашей модели телефона
+                p
+                    | Следите за новостями
+                    br
+                    | в социальных сетях
+                p.social
+                    a.vk(href="http://vk.com/cardsmobile", target="_blank")
+                    a.fb(href="http://facebook.com/cardsmobile", target="_blank")
+                    a.tw(href="http://twitter.com/cardsmobile", target="_blank")
+                    a.gp(href="http://plus.google.com/103055276936254491051", target="_blank")
 
         script(src='/public/bower/jquery/dist/jquery.min.js')
         script(src='/public/bower/bootstrap/dist/js/bootstrap.min.js')
