--- a/public/less/all.less
+++ b/public/less/all.less
@@ -55,9 +55,9 @@ h2 {
 @media(max-width:768px) {
     .row.banner {
         .col-sm-12 {
-            height: 305px;
+            height: 280px;
             padding: 20px 0 0;
-            background-size: 100%;
+            background-size: 320px;
         }
     }
 }
@@ -84,6 +84,7 @@ h2 {
 
 .row.mobile {
     text-align: center;
+    padding-bottom: 20px;
     p {
         margin: 20px 0 0;
     }
