--- a/public/less/all.less
+++ b/public/less/all.less
@@ -53,6 +53,9 @@ h2 {
 }
 
 @media(max-width:768px) {
+    .container-fluid > .row.logo {
+        height: 65px;
+    }
     .row.banner {
         .col-sm-12 {
             height: 270px;
@@ -73,9 +76,8 @@ h2 {
     }
     
     table {
-        margin: 20px auto;
+        margin: 20px auto 5px;
         color: #777;
-
         td {
             padding: 8px 16px;
         }
@@ -116,11 +118,11 @@ form {
     }
 
     input[name="model"] {
-        width: 320px;
+        width: 300px;
     }
 
     input[name="email"] {
-        width: 240px;
+        width: 220px;
         margin-right: 15px;
     }
 
