--- a/views/landing.jade
+++ b/views/landing.jade
@@ -95,5 +95,11 @@ html(lang='en')
                     a.tw(href="http://twitter.com/cardsmobile", target="_blank")
                     a.gp(href="http://plus.google.com/103055276936254491051", target="_blank")
 
+            .row.copyright
+                p
+                    | ©
+                    a(href='http://cardsmobile.ru')  Приложение «Кошелёк»
+                    |  2014
+
         script(src='/public/bower/jquery/dist/jquery.min.js')
         script(src='/public/js/index.js')
