--- a/public/less/all.less
+++ b/public/less/all.less
@@ -57,8 +57,8 @@ h2 {
     }
     .row.banner {
         .col-sm-12 {
-            height: 260px;
-            padding: 20px 0 0;
+            height: 255px;
+            padding: 15px 0 0;
             background-size: 300px;
         }
     }
@@ -133,7 +133,6 @@ form {
     }
 }
 
-
 .row.thanks {
     text-align: center;
     p {
@@ -161,4 +160,14 @@ form {
         }
     }
     display: none;
+}
+
+.row.copyright {
+    color: #999;
+    padding: 30px 20px 10px;
+    a {
+        color: inherit;
+        font-style: italic;
+    }
+    a:hover {}
 }
