--- a/public/less/all.less
+++ b/public/less/all.less
@@ -197,10 +197,12 @@ form {
 
 .row.copyright {
     color: #999;
-    padding: 30px 20px 10px;
+    padding: 30px 15px 4px;
+    font-style: italic;
     a {
         color: inherit;
-        font-style: italic;
     }
-    a:hover {}
+    a:hover {
+        text-decoration: underline;
+    }
 }
