--- a/views/landing.jade
+++ b/views/landing.jade
@@ -40,11 +40,9 @@ html(lang='en')
                             br
                             | пока не поддерживается
                         p
-                            | Узнайте о появлении
+                            | Узнайте о появлении «Кошелька»
                             br
-                            | "Кошелька" для Вашего
-                            br
-                            | телефона первыми
+                            | для Вашего телефона первыми
                         form#mobile(action=route.INDEX, method='POST')
                             input(type='email', name='email', placeholder='Ваш e-mail')
                             input(type='submit', value='OK')
