--- a/views/landing.jade
+++ b/views/landing.jade
@@ -27,7 +27,7 @@ html(lang='en')
                         p
                             | Скачайте приложение
                             br
-                            | для Вашего смартфона
+                            | для вашего смартфона
                         h2= modelName
                         if url
                             a(href=url) СКАЧАТЬ
@@ -42,7 +42,7 @@ html(lang='en')
                         p
                             | Узнайте о появлении «Кошелька»
                             br
-                            | для Вашего телефона первыми
+                            | для вашего телефона первыми
                         form#mobile(action=route.INDEX, method='POST')
                             input(type='email', name='email', placeholder='Ваш e-mail')
                             input(type='submit', value='OK')
@@ -80,13 +80,13 @@ html(lang='en')
                 p
                     | Спасибо!
                     br
-                    | Мы сообщим Вам о поддержке
+                    | Мы сообщим вам о поддержке
                     br
-                    | Вашей модели телефона
+                    | вашей модели телефона
                 p
                     | Следите за новостями
                     br
-                    | в социальных сетях
+                    | в социальных сетях:
                 p.social
                     a.vk(href="http://vk.com/cardsmobile", target="_blank")
                     a.fb(href="http://facebook.com/cardsmobile", target="_blank")
