--- a/public/less/all.less
+++ b/public/less/all.less
@@ -63,6 +63,7 @@ input, button, select, textarea {
 .row.logo {
     height: 80px;
     background: transparent url(/public/img/nfc-wallet.png) center center no-repeat;
+    background-size: 100px 27px;
 }
 
 .row.banner {
@@ -84,7 +85,7 @@ input, button, select, textarea {
     }
 }
 
-@media(max-width:768px) {
+@media (max-width:768px) {
     .container-fluid > .row.logo {
         height: 65px;
     }
@@ -93,6 +94,18 @@ input, button, select, textarea {
             height: 255px;
             padding: 15px 0 0;
             background-size: 300px;
+        }
+    }
+}
+
+@media (max-width:560px){
+    .row.banner {
+        .col-sm-12 {
+            height: 215px;
+            background-size: 265px;
+            h2 {
+                font-size: 17px;
+            }
         }
     }
 }
@@ -197,7 +210,7 @@ form {
 
 .row.copyright {
     color: #999;
-    padding: 30px 15px 4px;
+    padding: 40px 15px 4px;
     font-style: italic;
     a {
         color: inherit;
