--- a/public/less/all.less
+++ b/public/less/all.less
@@ -5,20 +5,29 @@
 
 @font-family: 'Open Sans', sans-serif;
 
-body {
-    font-family: @font-family;
-    font-size: 16px;
-    line-height: 1.42;
-    color: #333;
-}
-
 * {
     box-sizing: border-box;
+}
+
+html {
+    position: relative;
+}
+
+html, body {
+    min-height: 100%;
 }
 
 html, body, div {
     margin: 0;
     padding: 0;
+}
+
+body {
+    font-family: @font-family;
+    font-size: 16px;
+    line-height: 1.42;
+    color: #333;
+    margin-bottom: 60px;
 }
 
 table {
@@ -98,7 +107,7 @@ input, button, select, textarea {
     }
 }
 
-@media (max-width:560px){
+@media (max-width:400px){
     .row.banner {
         .col-sm-12 {
             height: 215px;
@@ -210,7 +219,7 @@ form {
 
 .row.copyright {
     color: #999;
-    padding: 40px 15px 4px;
+    padding: 5px 15px 4px;
     font-style: italic;
     a {
         color: inherit;
@@ -218,4 +227,6 @@ form {
     a:hover {
         text-decoration: underline;
     }
+    position: absolute;
+    bottom: 0;
 }
