--- a/views/landing.jade
+++ b/views/landing.jade
@@ -30,7 +30,18 @@ html(lang='en')
                             | для вашего смартфона
                         h2= modelName
                         if url
-                            a(href=url) СКАЧАТЬ
+                            a.button(href=url) СКАЧАТЬ
+                            br
+                            a.instructions(href="#") Инструкция по установке
+                            #instructions
+                                | Проверьте, разрешена ли установка приложений из сторонних источников:
+                                ol
+                                    li Зайдите в меню «Настройки».
+                                    li Выберите «Безопасность»
+                                    li Установите галочку в пункте «Неизвестные источники»
+                                    li В открытом окне нажмите «Ок».
+                                | Теперь вы можете загрузить и установить «Кошелек» на ваше устройство. После загрузки приложения откроется окно установки.
+
                         else
                             p Нет ссылки для скачивания
                 else
