--- a/public/less/all.less
+++ b/public/less/all.less
@@ -154,7 +154,7 @@ input, button, select, textarea {
     }
     a.button {
         display: inline-block;
-        padding: 12px 60px;
+        padding: 13px 70px;
         border-radius: 4px;
         border: 1px solid #F15A29;
         background-color: #F15A29;
@@ -163,15 +163,21 @@ input, button, select, textarea {
         margin-bottom: 10px;
     }
     a.instructions {
-        color: #00b3ee;
+        color: #111;
+        font-size: 0.85em;
+        line-height: 20px;
         text-decoration: underline;
+        vertical-align: top;
+        img {
+            margin-left: 4px;
+            margin-bottom: -3px;
+        }
     }
-
     #instructions {
         display: none;
         text-align: left;
         margin: 10px 0;
-        padding: 10px;
+        padding: 15px;
     }
 }
 
