--- a/public/less/all.less
+++ b/public/less/all.less
@@ -163,7 +163,7 @@ input, button, select, textarea {
         margin-bottom: 10px;
     }
     a.instructions {
-        color: #111;
+        color: inherit;
         font-size: 0.85em;
         line-height: 20px;
         text-decoration: underline;
