fixed images path

--- a/public/less/all.less
+++ b/public/less/all.less
@@ -71,12 +71,12 @@ input, button, select, textarea {
 
 .row.logo {
     height: 80px;
-    background: transparent url(/public/img/nfc-wallet.png) center center no-repeat;
+    background: transparent url(http://cardsmobile.ru/logo/nfc-wallet.png) center center no-repeat;
     background-size: 100px 27px;
 }
 
 .row.banner {
-    background: transparent url(/public/img/store.jpg) center center no-repeat;
+    background: transparent url(http://cardsmobile.ru/bg/store.jpg) center center no-repeat;
     background-size: cover;
     padding-bottom: 0;
 
@@ -84,7 +84,7 @@ input, button, select, textarea {
         height: 480px;
         margin: 0 auto;
         padding: 40px 0 0;
-        background: transparent url(/public/img/mastercard.png) center bottom no-repeat;
+        background: transparent url(http://cardsmobile.ru/hero/mastercard.png) center bottom no-repeat;
         text-align: center;
         h2 {
             margin: 0 auto;
