fixed image urls

--- a/public/less/all.less
+++ b/public/less/all.less
@@ -84,7 +84,7 @@ input, button, select, textarea {
         height: 480px;
         margin: 0 auto;
         padding: 40px 0 0;
-        background: transparent url(http://cardsmobile.ru/hero/mastercard.png) center bottom no-repeat;
+        background: transparent url(/download/public/img/mastercard.png) center bottom no-repeat;
         text-align: center;
         h2 {
             margin: 0 auto;
@@ -224,16 +224,16 @@ form {
             margin: 10px;
         }
         a.vk {
-            background: transparent url(/public/img/vkontakte.png) center center no-repeat;
+            background: transparent url(http://cardsmobile.ru/icon/vkontakte.png) center center no-repeat;
         }
         a.fb {
-            background: transparent url(/public/img/facebook.png) center center no-repeat;
+            background: transparent url(http://cardsmobile.ru/icon/facebook.png) center center no-repeat;
         }
         a.tw {
-            background: transparent url(/public/img/twitter.png) center center no-repeat;
+            background: transparent url(http://cardsmobile.ru/icon/twitter.png) center center no-repeat;
         }
         a.gp {
-            background: transparent url(/public/img/gplus.png) center center no-repeat;
+            background: transparent url(http://cardsmobile.ru/icon/gplus.png) center center no-repeat;
         }
     }
     display: none;
