update in instructions block

--- a/public/less/all.less
+++ b/public/less/all.less
@@ -168,6 +168,15 @@ input, button, select, textarea {
         line-height: 20px;
         text-decoration: underline;
         vertical-align: top;
+        transition: all 0.8s cubic-bezier(0.645, 0.045, 0.355, 1);
+        -webkit-transition: all 0.8s cubic-bezier(0.645, 0.045, 0.355, 1);
+        &.expanded {
+            text-decoration: none;
+            img {
+                -webkit-transform: rotate(180deg);
+                transform: rotate(180deg);
+            }
+        }
         img {
             margin-left: 4px;
             margin-bottom: -3px;
