--- a/views/landing.jade
+++ b/views/landing.jade
@@ -32,7 +32,7 @@ html(lang='en')
                         if url
                             a.button(href=url) СКАЧАТЬ
                             br
-                            a#here.instructions(href="#here") Инструкция по установке
+                            a#instr.instructions(href="#instr") Инструкция по установке
                                 img(width="16px", height="16px", src=route.PREFIX + "/public/img/expanded.png")
                             #instructions
                                 | Проверьте, разрешена ли установка приложений из сторонних источников:
