--- a/public/less/all.less
+++ b/public/less/all.less
@@ -178,8 +178,8 @@ input, button, select, textarea {
         img {
             margin-left: 4px;
             margin-bottom: -3px;
-            transition: all 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
-            -webkit-transition: all 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
+            transition: all 0.6s ease;
+            -webkit-transition: all 0.6s ease;
         }
     }
     #instructions {
