--- a/views/desktop.jade
+++ b/views/desktop.jade
@@ -143,6 +143,8 @@ html
                             br
                             input(type='email', name='email', placeholder='Ваш e-mail')
                             input(type='submit', value='OK')
+                        .row.thanks(style="text-align: center")
+                            h2 Спасибо!
         // FOOTER
         #footer.slide
             .wrapper
