added clickable logo for mobile

--- a/views/desktop.jade
+++ b/views/desktop.jade
@@ -139,7 +139,7 @@ html
                             br
                             | для вашей модели телефона
                         form#desktop(action=route.PREFIX + route.INDEX, method='POST')
-                            input(type='text', name='model', placeholder='Укажите Вашу модель телефона', required)
+                            input(type='text', name='model', placeholder='Укажите вашу модель телефона', required)
                             br
                             input(type='email', name='email', placeholder='Ваш e-mail')
                             input(type='submit', value='OK')
