--- a/views/landing.jade
+++ b/views/landing.jade
@@ -15,6 +15,7 @@ html(lang='en')
     body(class=pageName)
         .container-fluid
             .row.logo
+                a(href="http://cardsmobile.ru/")
             .row.banner
                 .col-sm-12
                     h2
