--- a/public/less/all.less
+++ b/public/less/all.less
@@ -73,6 +73,13 @@ input, button, select, textarea {
     height: 80px;
     background: transparent url(http://cardsmobile.ru/logo/nfc-wallet.png) center center no-repeat;
     background-size: 100px 27px;
+    a {
+        display: block;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .row.banner {
