fix button style for iphone

--- a/public/less/all.less
+++ b/public/less/all.less
@@ -207,6 +207,7 @@ form {
         border: 1px solid #aaa;
         margin-bottom: 15px;
         border-radius: 4px;
+        -webkit-appearance: none;
     }
 
     input[name="model"] {
