--- a/public/less/desktop.less
+++ b/public/less/desktop.less
@@ -29,6 +29,7 @@ form {
         border: 1px solid #F15A29;
         background-color: #F15A29;
         color: white;
+        -webkit-appearance: none;
     }
 }
 
