added form handlers

--- a/public/less/desktop.less
+++ b/public/less/desktop.less
@@ -31,6 +31,10 @@ form {
         color: white;
         -webkit-appearance: none;
     }
+
+    input.error {
+        border-color: #EE4433;
+    }
 }
 
 .row.thanks {
