--- a/views/desktop.jade
+++ b/views/desktop.jade
@@ -27,6 +27,8 @@ html
             "contactType" : "customer service"
             } ] }
     body
+        script.
+            var phones = #{phones};
         // HEADER
         #header.slide
             .wrapper
