--- a/public/less/desktop.less
+++ b/public/less/desktop.less
@@ -8,15 +8,15 @@ form {
     margin: 20px auto;
     text-align: center;
 
-    input[name="model"], input[name="email"], input[type="submit"] {
+    input[name="model"], input[name="email"], input[type="submit"], select {
         padding: 12px 15px;
         border: 1px solid #aaa;
         margin-bottom: 15px;
         border-radius: 4px;
     }
 
-    input[name="model"] {
-        width: 280px;
+    select {
+        width: 312px;
     }
 
     input[name="email"] {
@@ -36,8 +36,10 @@ form {
         border-color: #EE4433;
         background-color: #FFE5E5;
     }
+
 }
 
 .row.thanks {
     display: none;
 }
+
