--- a/views/desktop.jade
+++ b/views/desktop.jade
@@ -141,9 +141,9 @@ html
                             br
                             | для вашей модели телефона
                         form#desktop(action=route.PREFIX + route.INDEX, method='POST')
-                            select(name='vendor')
-                            select(name='model')
-                            input(type='text', name='model', placeholder='Укажите вашу модель телефона', required)
+                            select(name='vendor', placeholder="Выберите производителя")
+                            br
+                            select(name='model', placeholder="Выберите модель")
                             br
                             input(type='email', name='email', placeholder='Ваш e-mail')
                             input(type='submit', value='OK')
