--- a/views/landing.jade
+++ b/views/landing.jade
@@ -5,7 +5,7 @@
 doctype html
 html(lang='en')
     head
-        title= title
+        title Загрузить «Кошелёк»
         meta(charset='utf-8')
         meta(http-equiv='X-UA-Compatible', content='IE=edge')
         meta(name='viewport', content='width=device-width, initial-scale=1')
