--- a/public/less/desktop.less
+++ b/public/less/desktop.less
@@ -15,6 +15,14 @@ form {
         border-radius: 4px;
     }
 
+    input[name="model"] {
+        width: 280px;
+    }
+
+    datalist {
+        overflow: scroll;
+    }
+
     select {
         width: 312px;
     }
